--- a/webscraping_pyht_receitas.ipynb
+++ b/webscraping_pyht_receitas.ipynb
@@ -11,7 +11,7 @@
         "SxbWeSL-JFMl"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPUMlocUFlN4btBBxCKF/CL",
+      "authorship_tag": "ABX9TyO2199HcM30J/sI06tXgEPr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "  # Diferente da urllib, usamos text para apresentar o conteudo que o get nos trouxe\n",
         "  return html.text\n",
         "\n",
-        "request_pag(\"https://www.tudogostoso.com.br/\")"
+        "#request_pag(\"https://www.tudogostoso.com.br/\")"
       ],
       "execution_count": 0,
       "outputs": [
